<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="signUpEmailVM" type="com.aayushsapplication.app.modules.signupemail.data.viewmodel.SignUpEmailVM"/>
    </data>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearColumnlogo"
        android:layout_height="match_parent"
        android:layout_marginEnd="@dimen/_5pxh"
        android:layout_marginStart="@dimen/_6pxh"
        android:layout_marginTop="@dimen/_26pxv"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStyleblue_50">
        <LinearLayout android:id="@+id/linearSignUpemail"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStyleblue_50">
            <ImageView android:id="@+id/imageLogo"
                android:layout_gravity="start"
                android:layout_height="@dimen/_46pxh"
                android:layout_marginEnd="@dimen/_24pxh"
                android:layout_marginStart="@dimen/_24pxh"
                android:layout_width="@dimen/_122pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_logo_46x122"
                tools:ignore="ContentDescription" tools:src="@drawable/img_logo_46x122"/>
            <FrameLayout android:gravity="start"
                android:id="@+id/frameStackbackgroundshap"
                android:layout_height="@dimen/_765pxv"
                android:layout_marginTop="@dimen/_36pxv" android:layout_width="match_parent">
                <ImageView android:id="@+id/imageBackgroundshap"
                    android:layout_gravity="start"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_backgroundshap_white_a700"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_backgroundshap_white_a700"/>
                <LinearLayout android:id="@+id/linearColumnarrowleft"
                    android:layout_gravity="top|center"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_24pxh"
                    android:layout_marginVertical="@dimen/_24pxv"
                    android:layout_width="match_parent" android:orientation="vertical">
                    <ImageButton
                        android:background="@drawable/rectangle_bg_gray_100_radius_8"
                        android:id="@+id/btnArrowleft"
                        android:layout_height="@dimen/_40pxh"
                        android:layout_marginEnd="@dimen/_10pxh"
                        android:layout_width="@dimen/_40pxh"
                        android:paddingHorizontal="@dimen/_12pxh"
                        android:paddingVertical="@dimen/_12pxv"
                        android:scaleType="fitCenter"
                        android:src="@drawable/img_arrowleft" tools:ignore="ContentDescription"/>
                    <TextView android:id="@+id/txtWelcomeLets"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_10pxh"
                        android:layout_marginTop="@dimen/_35pxv"
                        android:layout_width="match_parent"
                        android:lineSpacingExtra="@dimen/_4pxh"
                        android:text="@{signUpEmailVM.signUpEmailModel.txtWelcomeLets}"
                        style="@style/txtSFProDisplaybold22" tools:text="@string/msg_welcome_let_s"/>
                    <LinearLayout android:gravity="start"
                        android:id="@+id/linearField"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_42pxv"
                        android:layout_width="match_parent"
                        android:orientation="horizontal" style="@style/groupStylewhite_A700cornerRadius">
                        <TextView android:ellipsize="end"
                            android:id="@+id/txtText"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/_21pxv"
                            android:layout_marginStart="@dimen/_20pxh"
                            android:layout_marginTop="@dimen/_22pxv"
                            android:layout_weight="0.2"
                            android:layout_width="0dp"
                            android:lineSpacingExtra="@dimen/_1pxh"
                            android:singleLine="true"
                            android:text="@{signUpEmailVM.signUpEmailModel.txtText}"
                            style="@style/txtSFProDisplaybold16" tools:text="@string/lbl_email"/>
                        <TextView android:ellipsize="end"
                            android:id="@+id/txtPleaseenter"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/_19pxv"
                            android:layout_marginEnd="@dimen/_75pxh"
                            android:layout_marginStart="@dimen/_55pxh"
                            android:layout_marginTop="@dimen/_24pxv"
                            android:layout_weight="0.8"
                            android:layout_width="0dp"
                            android:lineSpacingExtra="@dimen/_1pxh"
                            android:singleLine="true"
                            android:text="@{signUpEmailVM.signUpEmailModel.txtPleaseenter}"
                            style="@style/txtSFProDisplayregular16_1" tools:text="@string/msg_enter_your_emai"/>
                    </LinearLayout>
                    <androidx.appcompat.widget.AppCompatButton
                        android:ellipsize="end" android:gravity="center"
                        android:id="@+id/btnNext"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_163pxv"
                        android:layout_width="match_parent"
                        android:lineSpacingExtra="@dimen/_1pxh"
                        android:paddingBottom="@dimen/_21pxv"
                        android:paddingEnd="@dimen/_30pxh"
                        android:paddingStart="@dimen/_30pxh"
                        android:paddingTop="@dimen/_21pxv"
                        android:singleLine="true"
                        android:text="@string/lbl_next"
                        android:textAllCaps="true"
                        style="@style/btnSolidRounded_1" tools:text="@string/lbl_next"/>
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>
    </LinearLayout>
</layout>
