<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="splashPageVM" type="com.aayushsapplication.app.modules.splashpage.data.viewmodel.SplashPageVM"/>
    </data>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearColumnlogo"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_26pxv"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStyleblue_50">
        <LinearLayout android:id="@+id/linearSplashPage"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStyleblue_50">
            <ImageView android:id="@+id/imageLogo"
                android:layout_gravity="start"
                android:layout_height="@dimen/_155pxh"
                android:layout_marginEnd="@dimen/_28pxh"
                android:layout_marginStart="@dimen/_28pxh"
                android:layout_width="@dimen/_177pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_logo"
                tools:ignore="ContentDescription" tools:src="@drawable/img_logo"/>
            <ImageView android:gravity="start"
                android:id="@+id/imageContent"
                android:layout_height="@dimen/_329pxv"
                android:layout_marginTop="@dimen/_10pxv"
                android:layout_width="match_parent"
                android:scaleType="fitXY"
                imageRes="@{@drawable/img_content}"
                tools:ignore="ContentDescription" tools:src="@drawable/img_content"/>
            <FrameLayout android:id="@+id/frameStackbackgroundshap"
                android:layout_gravity="center_horizontal"
                android:layout_height="@dimen/_400pxv"
                android:layout_marginEnd="@dimen/_5pxh"
                android:layout_marginStart="@dimen/_6pxh"
                android:layout_marginTop="@dimen/_32pxv" android:layout_width="@dimen/_402pxh">
                <ImageView android:id="@+id/imageBackgroundshap"
                    android:layout_gravity="start"
                    android:layout_height="@dimen/_400pxh"
                    android:layout_width="match_parent"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_backgroundshap"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_backgroundshap"/>
                <LinearLayout android:id="@+id/linearColumnsignUp"
                    android:layout_gravity="top|center"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_38pxv"
                    android:layout_marginEnd="@dimen/_24pxh"
                    android:layout_marginStart="@dimen/_24pxh"
                    android:layout_marginTop="@dimen/_38pxv"
                    android:layout_width="match_parent" android:orientation="vertical">
                    <androidx.appcompat.widget.AppCompatButton
                        android:ellipsize="end" android:gravity="center"
                        android:id="@+id/btnSignUp"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:lineSpacingExtra="@dimen/_1pxh"
                        android:paddingBottom="@dimen/_21pxv"
                        android:paddingEnd="@dimen/_30pxh"
                        android:paddingStart="@dimen/_30pxh"
                        android:paddingTop="@dimen/_21pxv"
                        android:singleLine="true"
                        android:text="@string/lbl_sign_up"
                        android:textAllCaps="true"
                        style="@style/btnSolidRounded" tools:text="@string/lbl_sign_up"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtOrcontinuewit"
                        android:layout_gravity="center_horizontal"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_46pxh"
                        android:layout_marginStart="@dimen/_46pxh"
                        android:layout_marginTop="@dimen/_22pxv"
                        android:layout_width="wrap_content"
                        android:lineSpacingExtra="@dimen/_1pxh"
                        android:singleLine="true"
                        android:text="@{splashPageVM.splashPageModel.txtOrcontinuewit}"
                        style="@style/txtSFProDisplayregular16" tools:text="@string/msg_or_continue_wit"/>
                    <LinearLayout android:gravity="center_vertical"
                        android:id="@+id/linearRowfacebook"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_46pxh"
                        android:layout_marginStart="@dimen/_46pxh"
                        android:layout_marginTop="@dimen/_17pxv"
                        android:layout_width="wrap_content" android:orientation="horizontal">
                        <ImageView android:id="@+id/imageFacebook"
                            android:layout_height="@dimen/_30pxh"
                            android:layout_width="@dimen/_30pxh"
                            android:scaleType="fitXY"
                            android:src="@drawable/img_facebook"
                            tools:ignore="ContentDescription" tools:src="@drawable/img_facebook"/>
                        <ImageView android:id="@+id/imagePlay"
                            android:layout_height="@dimen/_30pxh"
                            android:layout_marginStart="@dimen/_20pxh"
                            android:layout_width="@dimen/_30pxh"
                            android:scaleType="fitXY"
                            android:src="@drawable/img_play"
                            tools:ignore="ContentDescription" tools:src="@drawable/img_play"/>
                        <ImageView android:id="@+id/imageForward"
                            android:layout_height="@dimen/_30pxh"
                            android:layout_marginStart="@dimen/_20pxh"
                            android:layout_width="@dimen/_30pxh"
                            android:scaleType="fitXY"
                            android:src="@drawable/img_forward"
                            tools:ignore="ContentDescription" tools:src="@drawable/img_forward"/>
                        <ImageView android:id="@+id/imageTwitter"
                            android:layout_height="@dimen/_30pxh"
                            android:layout_marginStart="@dimen/_20pxh"
                            android:layout_width="@dimen/_30pxh"
                            android:scaleType="fitXY"
                            android:src="@drawable/img_twitter"
                            tools:ignore="ContentDescription" tools:src="@drawable/img_twitter"/>
                    </LinearLayout>
                    <LinearLayout android:gravity="center_vertical"
                        android:id="@+id/linearRowconfirmation"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_45pxh"
                        android:layout_marginStart="@dimen/_46pxh"
                        android:layout_marginTop="@dimen/_48pxv"
                        android:layout_width="match_parent" android:orientation="horizontal">
                        <TextView android:ellipsize="end"
                            android:id="@+id/txtConfirmation"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_2pxv"
                            android:layout_weight="0.76"
                            android:layout_width="0dp"
                            android:lineSpacingExtra="@dimen/_1pxh"
                            android:singleLine="true"
                            android:text="@{splashPageVM.splashPageModel.txtConfirmation}"
                            style="@style/txtSFProDisplayregular18" tools:text="@string/msg_already_have_an"/>
                        <TextView android:ellipsize="end"
                            android:id="@+id/txtLogin"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/_3pxv"
                            android:layout_marginStart="@dimen/_10pxh"
                            android:layout_weight="0.24"
                            android:layout_width="0dp"
                            android:lineSpacingExtra="@dimen/_1pxh"
                            android:singleLine="true"
                            android:text="@{splashPageVM.splashPageModel.txtLogin}"
                            android:textAllCaps="true"
                            style="@style/txtLufgamedium18" tools:text="@string/lbl_log_in"/>
                    </LinearLayout>
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>
    </LinearLayout>
</layout>
